ajout des teste unitaire , corection des missions en carence