@@ -1,30 +1,45 @@
 package com.wafa.assurance.config;
 
-import com.wafa.assurance.security.JwtAuthenticationFilter;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.util.StringUtils;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
 
-import java.util.Arrays;
-
-import org.springframework.core.annotation.Order;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Set;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 @RequiredArgsConstructor
 public class SecurityConfig {
-    
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Value("${app.frontend-url:http://localhost:3000}")
+    private String frontendUrl;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -32,13 +47,25 @@ public class SecurityConfig {
     }
 
     @Bean
+    public Converter<Jwt, ? extends AbstractAuthenticationToken> jwtAuthenticationConverter() {
+        JwtGrantedAuthoritiesConverter defaultAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
+
+        return jwt -> {
+            Set<GrantedAuthority> authorities = new HashSet<>(defaultAuthoritiesConverter.convert(jwt));
+            authorities.addAll(extractAuthorities(jwt));
+            return new JwtAuthenticationToken(jwt, authorities, resolvePrincipal(jwt));
+        };
+    }
+
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);
-        
+        configuration.setAllowedOrigins(List.of(frontendUrl));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -52,10 +79,75 @@ public class SecurityConfig {
             .headers(headers -> headers.frameOptions(frameOptions -> frameOptions.sameOrigin()))
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(authz -> authz
-                .anyRequest().permitAll()
+                .requestMatchers("/", "/login", "/logout-success", "/error", "/css/**", "/js/**", "/images/**", "/webjars/**").permitAll()
+                .requestMatchers("/h2-console/**").permitAll()
+                .requestMatchers("/api/auth/me").authenticated()
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/admin/dashboard/**").hasAnyRole("ADMIN", "EXPERT")
+                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                .requestMatchers("/api/**").authenticated()
+                .requestMatchers("/admin/dashboard").hasAnyRole("ADMIN", "EXPERT")
+                .requestMatchers("/admin/**").hasRole("ADMIN")
+                .requestMatchers("/expert/**").hasRole("EXPERT")
+                .anyRequest().authenticated()
             )
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+            .oauth2ResourceServer(oauth2 -> oauth2.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())))
+            .exceptionHandling(ex -> ex.authenticationEntryPoint((request, response, authException) -> {
+                if (request.getRequestURI().startsWith("/api/")) {
+                    response.sendError(HttpServletResponse.SC_UNAUTHORIZED);
+                    return;
+                }
+
+                response.sendRedirect(frontendUrl);
+            }));
 
         return http.build();
+    }
+
+    private Collection<? extends GrantedAuthority> extractAuthorities(Jwt jwt) {
+        List<String> roles = new ArrayList<>();
+
+        Object realmAccess = jwt.getClaim("realm_access");
+        if (realmAccess instanceof Map<?, ?> realmAccessMap) {
+            Object realmRoles = realmAccessMap.get("roles");
+            if (realmRoles instanceof Collection<?> roleCollection) {
+                roleCollection.stream()
+                    .map(String::valueOf)
+                    .forEach(roles::add);
+            }
+        }
+
+        Object resourceAccess = jwt.getClaim("resource_access");
+        if (resourceAccess instanceof Map<?, ?> resourceAccessMap) {
+            resourceAccessMap.values().forEach(clientAccess -> {
+                if (clientAccess instanceof Map<?, ?> clientAccessMap) {
+                    Object clientRoles = clientAccessMap.get("roles");
+                    if (clientRoles instanceof Collection<?> roleCollection) {
+                        roleCollection.stream()
+                            .map(String::valueOf)
+                            .forEach(roles::add);
+                    }
+                }
+            });
+        }
+
+        return roles.stream()
+            .map(role -> role.toUpperCase(Locale.ROOT))
+            .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
+            .distinct()
+            .map(SimpleGrantedAuthority::new)
+            .toList();
+    }
+
+    private String resolvePrincipal(Jwt jwt) {
+        if (StringUtils.hasText(jwt.getClaimAsString("email"))) {
+            return jwt.getClaimAsString("email");
+        }
+
+        if (StringUtils.hasText(jwt.getClaimAsString("preferred_username"))) {
+            return jwt.getClaimAsString("preferred_username");
+        }
+
+        return jwt.getSubject();
     }
 }
